--- a/site.css
+++ b/site.css
@@ -16,11 +16,9 @@ body {
 }
 #navigate {
     background: #d82b1f;
-    width: 1305;
+    width: 100%;
     padding: 5px 0px 5px 0px;
 	margin-bottom: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 table.navi {
     color:antiquewhite;
